--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="UTF-8" />
-      <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+      <link rel="icon" type="image/x-icon" href="./src/assets/terminal_icon.png" />
       <meta name="description" content="Personal website of Italo Carlos, a software developer." />
       <meta name="keywords" content="website, landing, portfolio, curriculum" />
       <link
